GPC/tests/examples/fail/wrongPointers3.gpc


void wrongPointers3(char *x) {
    
    char *y = x + 'h';

}
